SERVER-34731 Fixes race condition in read_concern_snapshot_yielding.js